Release v1.1 (#69)
* Added addAgeCategoryToSeason endpoint

* Deleted circular dependency

* Added rank to Competition and CompetitionDto

* Fixed annotation

* Deleted circular dependency in services

* Add competitions view

* Changed naming convention

* [KT-189] Remove db files

* create registration model to register athletes for competitions and fixes and refactoring

* Create README.md

* Adapted code to develop

* Fix docker

* fixes and refactoring

* create registration endpoint

* Added getAgeCategoryByAthleteIdAndSeasonId endpoint

* Moved endpoint to RegistrationController

* Added option to create season in the past

* Added information about year of birth to the list of categories under age bounds.

* Revert "Moved endpoint to RegistrationController"

This reverts commit c5208960eb69cc2541ed9d1d5211312bd398fb3a.

* Revert "Added getAgeCategoryByAthleteIdAndSeasonId endpoint"

This reverts commit 35005fea1368807566fd554642eb994b6a0d67d2.

* create getAgeCategoriesByAthleteIdAndSeasonId

* Added api request for addAgeCategoryToSeason

* Added HttpClientTestingModule for testing

* Feature/KT-163 (#67)



    added more mocked data to backend
    fixed backend bug related to registration not saving to db
    added model for registartion to frontend
    connected competition registration related services with backend
    reformatted whole frontend with prettier (mistakenly, thats why over 1000 lines changed)

---------

Co-authored-by: Michał Kuszewski <michal.kuszewski09@gmail.com>
Co-authored-by: mi-kusz <115389931+mi-kusz@users.noreply.github.com>
Co-authored-by: Martyna Mila <martynamila2001@gmail.com>
Co-authored-by: Mateusz Knap <115702864+MatoKnap@users.noreply.github.com>
Co-authored-by: Hubert Kowal <hubertkowal@MacBook-Air-Hubert-2.local>
Co-authored-by: Tomasz <87528104+T4oMeK@users.noreply.github.com>