@@ -1,71 +1,78 @@
 package com.sumotournamenthub.backend.service;
 
+import com.sumotournamenthub.backend.domain.AgeCategory;
 import com.sumotournamenthub.backend.domain.Season;
 import com.sumotournamenthub.backend.dto.AgeCategoryDto;
 import com.sumotournamenthub.backend.dto.SeasonDto;
 import com.sumotournamenthub.backend.repository.SeasonRepository;
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
+
+import static com.sumotournamenthub.backend.utils.ExceptionUtils.entityNotFound;
 
 @Service
 @RequiredArgsConstructor
 public class SeasonService {
     private final AgeCategoryService ageCategoryService;
-
     private final SeasonRepository repository;
+    private final AthleteService athleteService;
 
     public List<SeasonDto> getUpcomingSeasons() {
         return repository.findByStartDateGreaterThanEqual(LocalDate.now())
                 .stream().map(this::convertToDto).toList();
     }
 
-    public Optional<Set<AgeCategoryDto>> getCategoriesBySeasonId(int id) {
-        return repository.findById(id)
-                .map(season -> season.getCategories().stream()
-                        .map(ageCategoryService::convertToDto)
-                        .collect(Collectors.toSet()));
+    public List<AgeCategoryDto> getAllAgeCategories(int id) {
+        var season = getSeasonEntity(id);
+        return season.getCategories().stream().map(ageCategoryService::convertToDto).toList();
+    }
+
+    public AgeCategoryDto getAthleteAgeCategoriesInGivenSeason(int seasonId, int athleteId) {
+        var athleteAge = athleteService.calculateAthleteAge(athleteId);
+        var season = getSeasonEntity(seasonId);
+        return season.getCategories().stream()
+                .filter(c-> c.getAgeLowerBound() <= athleteAge && c.getAgeUpperBound() > athleteAge)
+                .findFirst()
+                .map(ageCategoryService::convertToDto)
+                .orElseThrow(() -> new EntityNotFoundException
+                        (String.format("Age category for athlete %d in season %d not found", athleteId, seasonId)));
     }
 
     public List<SeasonDto> getAllSeasons() {
-        return repository.findAll()
-                .stream().map(this::convertToDto).collect(Collectors.toList());
+        return repository.findAll().stream().map(this::convertToDto).toList();
     }
 
-    public Optional<SeasonDto> getSeasonById(int id) {
-        Optional<Season> season = repository.findById(id);
-
-        return season.map(this::convertToDto);
+    public SeasonDto getSeason(int id) {
+        return convertToDto(getSeasonEntity(id));
     }
 
-    public Optional<SeasonDto> updateSeason(int id, SeasonDto seasonDto) {
-        return repository.findById(id)
-            .map(existingSeason -> {
-                var saved = repository.save(convertToEntity(seasonDto));
-                return Optional.of(convertToDto(saved));
-            }).orElse(Optional.empty());
+    public Season getSeasonEntity(int id) {
+        return repository.findById(id).orElseThrow(() -> entityNotFound("Season", id));
     }
 
     public SeasonDto createSeason(SeasonDto seasonDto) {
-        Season seasonToSave = convertToEntity(seasonDto);
+        var season = new Season(seasonDto.getName(), seasonDto.getStartDate(), seasonDto.getEndDate());
 
-        Season saved = repository.save(seasonToSave);
-
-        return convertToDto(saved);
+        return convertToDto(repository.save(season));
     }
 
-    public boolean deleteSeason(int id) {
-        return repository.findById(id)
-            .map(s -> {
-                repository.deleteById(id);
-                return true;
-            }).orElse(false);
+    public void deleteSeason(int id) {
+        var season = getSeasonEntity(id);
+        repository.delete(season);
+    }
 
+    @Transactional
+    public void addAgeCategoryToSeason(int seasonId, int ageCategoryId) {
+        Season season = getSeasonEntity(seasonId);
+        AgeCategory ageCategory = ageCategoryService.getAgeCategoryEntity(ageCategoryId);
+        season.getCategories().add(ageCategory);
+        repository.save(season);
+        ageCategoryService.addSeasonToAgeCategory(ageCategory, season);
     }
 
     private SeasonDto convertToDto(Season season) {
@@ -77,9 +84,4 @@ public class SeasonService {
                 .build();
     }
 
-    private Season convertToEntity(SeasonDto seasonDto) {
-        Season season = new Season(seasonDto.getName(), seasonDto.getStartDate(), seasonDto.getEndDate());
-        season.setId(seasonDto.getId());
-        return season;
-    }
 }
